objects/CaseTeamRoleAssociation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A mapping of the association of Case Team Roles and Role Groups</description>
    <fields>
        <fullName>AccountType__c</fullName>
        <description>The value of Type field on Account standard object</description>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseTeamRole__c</fullName>
        <label>Case Team Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactRole__c</fullName>
        <label>Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Team Role Association</label>
</CustomObject>